@@ -1,3 +1,10 @@
+2010-10-19  Andoni Morales Alastruey  <amorales@flumotion.com>
+
+	reviewed by: Julien Le Goff 
+
+	* flumotion/component/effects/deinterlace/deinterlace.py:
+	fix again colorspace renegotiations switching the deinterlacer
+
 2010-10-08  Andoni Morales Alastruey  <amorales@flumotion.com>
 
 	reviewed by: Marc-André Lureau 
